--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -11,7 +11,11 @@
         size="3"
         *ngFor="let photo of photoService.photos; index as position"
       >
-        <ion-img [src]="photo.webviewPath"> </ion-img>
+        <ion-img
+          [src]="photo.webviewPath"
+          (click)="showActionSheet(photo, position)"
+        >
+        </ion-img>
       </ion-col>
     </ion-row>
   </ion-grid>
