--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <ion-title> Tab 3 </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,5 +11,108 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col> ion-col </ion-col>
+      <ion-col> ion-col </ion-col>
+      <ion-col> ion-col </ion-col>
+      <ion-col> ion-col </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="6"> ion-col [size="6"] </ion-col>
+      <ion-col> ion-col </ion-col>
+      <ion-col> ion-col </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="3"> ion-col [size="3"] </ion-col>
+      <ion-col> ion-col </ion-col>
+      <ion-col size="3"> ion-col [size="3"] </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="3"> ion-col [size="3"] </ion-col>
+      <ion-col size="3" offset="3"> ion-col [size="3"] [offset="3"] </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col> ion-col </ion-col>
+      <ion-col>
+        ion-col
+        <br />#
+      </ion-col>
+      <ion-col>
+        ion-col
+        <br /># <br />#
+      </ion-col>
+      <ion-col>
+        ion-col
+        <br /># <br /># <br />#
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col class="ion-align-self-start"> ion-col [start] </ion-col>
+      <ion-col class="ion-align-self-center"> ion-col [center] </ion-col>
+      <ion-col class="ion-align-self-end"> ion-col [end] </ion-col>
+      <ion-col>
+        ion-col
+        <br /># <br />#
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="ion-align-items-start">
+      <ion-col> [start] ion-col </ion-col>
+      <ion-col> [start] ion-col </ion-col>
+      <ion-col class="ion-align-self-end"> [start] ion-col [end] </ion-col>
+      <ion-col>
+        ion-col
+        <br /># <br />#
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="ion-align-items-center">
+      <ion-col> [center] ion-col </ion-col>
+      <ion-col> [center] ion-col </ion-col>
+      <ion-col> [center] ion-col </ion-col>
+      <ion-col>
+        ion-col
+        <br /># <br />#
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="ion-align-items-end">
+      <ion-col> [end] ion-col </ion-col>
+      <ion-col class="ion-align-self-start"> [end] ion-col [start] </ion-col>
+      <ion-col> [end] ion-col </ion-col>
+      <ion-col>
+        ion-col
+        <br /># <br />#
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="12" size-sm> ion-col [size="12"] [size-sm] </ion-col>
+      <ion-col size="12" size-sm> ion-col [size="12"] [size-sm] </ion-col>
+      <ion-col size="12" size-sm> ion-col [size="12"] [size-sm] </ion-col>
+      <ion-col size="12" size-sm> ion-col [size="12"] [size-sm] </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="12" size-md> ion-col [size="12"] [size-md] </ion-col>
+      <ion-col size="12" size-md> ion-col [size="12"] [size-md] </ion-col>
+      <ion-col size="12" size-md> ion-col [size="12"] [size-md] </ion-col>
+      <ion-col size="12" size-md> ion-col [size="12"] [size-md] </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="6" size-lg offset="3">
+        ion-col [size="6"] [size-lg] [offset="3"]
+      </ion-col>
+      <ion-col size="3" size-lg> ion-col [size="3"] [size-lg] </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <!-- <app-explore-container name="Tab 3 page"></app-explore-container> -->
 </ion-content>
